// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StandaloneIcon Interactive icon renders 1`] = `
.c2 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c1 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  font-size: 1.5rem;
}

.c1::before {
  content: '\\f111';
}

.c0 {
  padding: 0;
  margin: 0;
  border-width: 0;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #2a2c2e;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  box-shadow: none;
  cursor: pointer;
}

<button
  class="c0"
  style="padding:4px;margin:-4px"
>
  <i
    class="c1"
  >
    <span
      class="c2"
    >
      Some text for the screen readers.
    </span>
  </i>
</button>
`;

exports[`StandaloneIcon Plain StandaloneIcon renders 1`] = `
.c0 {
  font-family: 'TELUS Core Icons';
  display: inline-block;
  font-weight: normal;
  font-style: normal;
  speak: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1;
  vertical-align: middle;
  font-size: 1.5rem;
}

.c0::before {
  content: '\\f111';
}

<i
  class="c0"
/>
`;
